[project]
name = "bactos-3d-loc"
version = "0.2.0"
description = "Cuts proplets and counts bacteria"
readme = "README.md"
authors = [
    { name = "Andrey Aristov", email = "aaristov@pasteur.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "big-fish>=0.6.2",
    "dask>=2024.12.0",
    "fire>=0.7.0",
    "nd2>=0.10.1",
    "numpy<2",
    "pandas>=2.2.3",
    "tifffile>=2024.12.12",
    "tqdm>=4.67.1",
    "zarr-tools>=0.4.5",
    "zarr>=2.18.3",
]

[project.scripts]
bactos-3d-loc = "bactos_3d_loc.loc3d:main"
bactos-3d-crop = "bactos_3d_loc.crop:main"
bactos-3d-count = "bactos_3d_loc.count:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "napari[all]>=0.5.5",
]
